# nb_tokenizer

./: .gitignore  pyproject.toml
large_scale_testing/: preprocess_texts.ipynb  run_new_tokenizer.ipynb  run_orig_tokenizer.ipynb  run_tokenizers.ipynb  times.txt  tokenizer_times.txt
src/: nb_tokenizer.py
test_detokenizer/: detokenized_text.txt  list_tokens.txt  test_detokenizer.ipynb
testset/: testsett.txt  testsett_forkortelser_csv.csv
testset/test_tokenizer/: teste_tokenisator.ipynb  tokenisert_testsett_241205_112755.txt  tokenisert_testsett_241205_141316.txt  tokenisert_testsett_241205_161733.txt  tokenisert_testsett_241206_113123.txt  tokenisert_testsett_241206_124618.txt  tokenisert_testsett_241206_135631.txt  tokenisert_testsett_241212_154610.txt  tokenisert_testsett_241213_135842.txt  tokenisert_testsett_241219_105945.txt  tokenisert_testsett_241220_134011.txt  tokenisert_testsett_241220_135141.txt  tokenisert_testsett_250114_154909.txt  tokenisert_testsett_250121_141630.txt  tokenisert_testsett_250124_135027.txt  tokenisert_testsett_250124_160230.txt  tokenisert_testsett_250130_154611.txt  tokenisert_testsett_250210_145704.txt  tokenisert_testsett_250220_140610.txt  tokenisert_testsett_250313_111347.txt  tokenisert_testsett_orig.txt
