[project]
name = "nb_tokenizer"
version = "0.1.0"
description = "Tokenization of Norwegian texts"
authors = [
    {name = "The DH-lab at the National Library of Norway", email = "dh-lab@nb.no"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.7"
dependencies = []

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.0",
]

[tool.pdm.build]
includes = [
    "src/nb_tokenizer.py",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
